fix z-index issue

--- a/public/css/bnt_more.css
+++ b/public/css/bnt_more.css
@@ -14,6 +14,7 @@
     top: 2em ;
     right: 2em;
     font-size: 0.9em;
+    z-index: 100;
 }
 
 .bnt_to_dropdown {
